--- a/homepage.html
+++ b/homepage.html
@@ -56,7 +56,7 @@ body {font-family: "Lato", sans-serif}
     <img src="Laptop2.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>Prestine</h3>
-      <p><b>Book your slot for room cleaning. BACD</b></p>    
+      <p><b>Book your slot for room cleaning. </b></p>    
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
