--- a/homepage.html
+++ b/homepage.html
@@ -63,7 +63,7 @@ body {font-family: "Lato", sans-serif}
     <img src="Table.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>Prestine</h3>
-      <p><b>Help the cleaning workers know the apt time to visit your room </b></p>    
+      <p><b>Help the cleaning workers know the apt time to visit your room.</b></p>
     </div>
   </div>
 
