--- a/homepage.html
+++ b/homepage.html
@@ -69,7 +69,7 @@ body {font-family: "Lato", sans-serif}
 
   <!-- The Prestine Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="pristine">
-    <h2 class="w3-wide">THE PRESTINE</h2>
+    <h2 class="w3-wide">THE PRISTINE</h2>
     <p class="w3-opacity"><i>Room cleaning at convinience</i></p>
     <p class="w3-justify">This is an extremely easy to use platform where you can book a slot for hostel room cleaning. So the next time you remember that your hostel room needs a little cleaning up,Go to the "Book A SLOT" section and select any date and time convinient for you.</p>
     <div class="w3-row w3-padding-32">
